# packrunner

./: .gitignore  LICENSE  README.md  package.yaml  packrunner.cabal  stack.yaml
app/: Main.hs
src/: ConfigReader.hs  Packrunner.hs
src/Packrunner/: Pull.hs
