name:                packrunner
version:             0.1.0.0
synopsis:            prpr command [arguments]
description:         Packrunner is a simple, purely functional package manager which is inspired by port utility and `nix` package manager system.
homepage:            https://github.com/zypeh/packrunner#readme
license:             Apache-2.0
license-file:        LICENSE
author:              zypeh
maintainer:          zypeh.geek@gmail.com
copyright:           BSD-2
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Packrunner
  other-modules:       Paths_packrunner
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable prpr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packrunner
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zypeh/packrunner
